--- a/proyectoIntegrador4/src/app/components/inicio/inicio.component.html
+++ b/proyectoIntegrador4/src/app/components/inicio/inicio.component.html
@@ -29,7 +29,7 @@
   </div>
   <br />
   <div class="text-center">
-    <h1>Toda la dulcura que sueñas!!!</h1>
+    <h1>Toda la dulzura que sueñas!!!</h1>
   </div>
 <div class="container container-productos-inicio">
   <div class="card-group">
