--- a/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
+++ b/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
         <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fas fa-search"></i> Buscar</button>
       </form>
       -->
-      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/carrito'>
+      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" (click)="abrirModal();">
         <i class="fas fa-shopping-cart"></i>
         Reservas
       </a>
@@ -46,3 +46,5 @@
   </div>
 
 </nav>
+<!-- COMENTARIO -->
+<!-- routerLink='/carrito' -->
