--- a/proyectoIntegrador4/src/app/main-navbar/main-navbar.component.css
+++ b/proyectoIntegrador4/src/app/main-navbar/main-navbar.component.css
@@ -4,6 +4,7 @@
 
 .sidenav {
   width: 200px;
+  box-shadow: 3px 0 6px rgba(0, 0, 0, .24)
 }
 
 .sidenav .mat-toolbar {
@@ -21,7 +22,4 @@
   text-align: center;
 }
 
-span{
-  text-align: center;
-}
 
