--- a/proyectoIntegrador4/src/app/modal-sesion/modal-sesion.component.html
+++ b/proyectoIntegrador4/src/app/modal-sesion/modal-sesion.component.html
@@ -17,6 +17,6 @@
 <div mat-dialog-actions>
     <button mat-button type="button" (click)="clickSalir();"><i class="material-icons">
     arrow_back</i>Atrás</button>
-    <button mat-button type="submit"><i class="material-icons">
+    <button mat-button type="submit" routerLink='/carrito'><i class="material-icons">
     add_circle</i>Ingresar</button>
 </div>
