--- a/proyectoIntegrador4/src/app/components/carrito/carrito.component.html
+++ b/proyectoIntegrador4/src/app/components/carrito/carrito.component.html
@@ -17,27 +17,27 @@
         <h5 class="card-text text-right">
           1
         </h5>
-        <h5 class="card-text text-right">
+        <!-- <h5 class="card-text text-right">
           1
-        </h5>
+        </h5> -->
       </div>
       <div class="col-2">
         <h4 class="card-title text-center">Precio</h4>
         <h5 class="card-text text-right">
           $1.50
         </h5>
-        <h5 class="card-text text-right">
+        <!-- <h5 class="card-text text-right">
           $1.50
-        </h5>
+        </h5> -->
       </div>
       <div class="col-1">
         <h4 class="opcion text-center">Item</h4>
         <h5 class="card-text">
           <button type="button" class="item-btn btn btn-outline-danger btn-block"><i class="fas fa-trash-alt fa-lg"></i></button>
         </h5>
-        <h5 class="card-text">
+        <!-- <h5 class="card-text">
           <button type="button" class="item-btn btn btn-outline-danger btn-block"><i class="fas fa-trash-alt fa-lg"></i></button>
-        </h5>
+        </h5> -->
       </div>
       <div class="col-1">
         <h4 class="total text-center">Total</h4>
