--- a/proyectoIntegrador4/src/app/components/inicio/inicio.component.html
+++ b/proyectoIntegrador4/src/app/components/inicio/inicio.component.html
@@ -40,8 +40,8 @@
         <h5 class="card-title">Pastel de Vainilla</h5>
         <p class="card-text">Relleno de manjar de leche cubierto de crema de chantilly</p>
         <h2 class="precio text-center bg-secondary">$10.50</h2>
-        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                   Reservar</button>
+        <!-- <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                   Reservar</button> -->
       </div>
     </div>
     <div class="card col-3 border-warning mb-2">
