--- a/proyectoIntegrador4/src/app/main-navbar/main-navbar.component.html
+++ b/proyectoIntegrador4/src/app/main-navbar/main-navbar.component.html
@@ -20,6 +20,8 @@
           list_alt</i>Ver Pedidos</a>
       <a mat-list-item routerLink="/inicio"><i class="material-icons">
           person</i>Cerrar Sesión</a>
+      <a mat-list-item (click)="abrirModalAdmin();"><i class="material-icons">
+        person_add</i>Registrar Aministrador</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
