--- a/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
+++ b/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
@@ -34,8 +34,12 @@
       </form>
       -->
       <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" (click)="abrirModal();">
-        <i class="fas fa-shopping-cart"></i>
-        Reservas
+        <i class="fas fa-sign-in-alt"></i>
+        Iniciar Sesión
+      </a>
+      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/registro'>
+        <i class="fas fa-address-card"></i>
+        Registrate
       </a>
       <!--
       <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/login'><i class="fas fa-user"></i>
