--- a/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
+++ b/proyectoIntegrador4/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink='/main-navbar'>Administración</a>
+          <a class="nav-link" (click)="abrirModalInicioAdmin()">Administración</a>
         </li>
 
       </ul>
@@ -52,3 +52,4 @@
 </nav>
 <!-- COMENTARIO -->
 <!-- routerLink='/carrito' -->
+<!-- routerLink='/main-navbar' -->
