--- a/proyectoIntegrador4/src/app/components/home/home.component.html
+++ b/proyectoIntegrador4/src/app/components/home/home.component.html
@@ -1,4 +1,30 @@
-<app-body></app-body>
+<!-- <app-body></app-body> -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <div class="container">
+    <a class="navbar-brand" routerLink='/inicio'><i class="fab fa-opencart"></i> <b> Pastelería</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/inicio'>
+        <i class="fas fa-user-alt"></i>
+        Cerrar Sesión
+      </a>
+    </div>
+  </div>
+
+</nav>
+
+<div class="container">
+  <p></p>
+  <div style="text-align:center">
+    <img width="390" alt="Angular Logo" src="../../assets/img/Pasteleria SF.png">
+  </div>
+</div>
+
 <div class="container" align="center">
   <div id="carouselExampleIndicators" class="carousel slide col-12" data-ride="carousel">
     <ol class="carousel-indicators">
