--- a/proyectoIntegrador4/src/app/components/home/home.component.css
+++ b/proyectoIntegrador4/src/app/components/home/home.component.css
@@ -6,6 +6,10 @@
     color: black;
 }
 
+.carousel-inner{
+    padding: 20px;
+}
+
 img.mediana {
     width: auto;
     height: 250px;
@@ -62,4 +66,44 @@ img.mediana {
 
 .card-group{
     width: 100%;
+}
+
+/* .nav-item .nav-link {
+	color:white;
+} */
+
+/* .nav-item .nav-link:hover {
+  background: #827C7C;
+	color: #DDD9D9;
+} */
+
+/*color del título Pastelería*/
+
+.navbar-brand {
+	color: white;
+}
+
+/*margenes del navbar*/
+
+.navbar {
+	height: 45px;
+	border: 1px solid;
+	position: relative;
+  	width: 100%;
+}
+
+/*cambios de color en el dropdown*/
+
+/* .dropdown-item:hover {
+	background: #DDD9D9;
+	color: #205A93;
+} */
+
+.carrito-btn {
+	padding: 0px;
+    width: 200px;
+    height: 28px;
+	color: white;
+	background-color: #827C7C;
+	border: #DDD9D9;
 }
