--- a/proyectoIntegrador4/src/app/components/home/home.component.html
+++ b/proyectoIntegrador4/src/app/components/home/home.component.html
@@ -1,80 +1,78 @@
 <!-- <app-body></app-body> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-  <div class="container">
-    <a class="navbar-brand" routerLink='/inicio'><i class="fab fa-opencart"></i> <b> Pastelería</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container">
+        <a class="navbar-brand" routerLink='/inicio'><i class="fab fa-opencart"></i> <b> Pastelería</b></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/inicio'>
-        <i class="fas fa-user-alt"></i>
-        Cerrar Sesión
-      </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/inicio'>
+                <i class="fas fa-user-alt"></i> Cerrar Sesión
+            </a>
+        </div>
     </div>
-  </div>
 
 </nav>
 
 <div class="container">
-  <p></p>
-  <div style="text-align:center">
-    <img width="390" alt="Angular Logo" src="../../assets/img/Pasteleria SF.png">
-  </div>
+    <p></p>
+    <div style="text-align:center">
+        <img width="390" alt="Angular Logo" src="../../assets/img/Pasteleria SF.png">
+    </div>
 </div>
 
 <div class="container" align="center">
-  <div id="carouselExampleIndicators" class="carousel slide col-12" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../assets/img/images1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../../assets/img/images2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../../assets/img/seccion.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <div id="carouselExampleIndicators" class="carousel slide col-12" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../../assets/img/images1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../../assets/img/images2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../../assets/img/seccion.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true">
-            </span>
+      </span>
             <span class="sr-only">Previous</span>
         </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-  </div>
-  <br />
-  <div class="text-center">
-    <h1>Toda la dulzura que sueñas!!!</h1>
-  </div>
-  <div class="container">
-  <div class="row">
-      <!--POR REVISAR SOLO 3 COLUMNAS-->
-    <div class="col-md-auto">
-  <div class="card-deck">
-    <div class="card" *ngFor="let resp of pasteles.datos">
-        <img src="../../assets/img/pastel1.jpeg" class="card-img-top" alt="image">
-        <div class="card-body">
-          <h5 class="card-title">{{resp.nombre}}</h5>
-          <p class="card-text">{{resp.descripcion}}</p>
-          <h2 class="precio text-center bg-secondary">{{resp.precio}}</h2>
-          <button type="button" class="btn btn-block btn-outline-secondary" (click)="abrirModal();"><i class="fas fa-cart-plus"></i>Reservar</button>
+    </div>
+    <br />
+    <div class="text-center">
+        <h1>Toda la dulzura que sueñas!!!</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <!--POR REVISAR SOLO 3 COLUMNAS-->
+            <div class="col-md-auto">
+                <div class="card-deck">
+                    <div class="card" *ngFor="let resp of pasteles.datos">
+                        <img src="data:{{ resp.tipoImagen}};base64,{{resp.contenidoImagen}}" class="card-img-top" alt="image">
+                        <div class="card-body">
+                            <h5 class="card-title">{{resp.nombre}}</h5>
+                            <p class="card-text">{{resp.descripcion}}</p>
+                            <h2 class="precio text-center bg-secondary">{{resp.precio}}</h2>
+                            <button type="button" class="btn btn-block btn-outline-secondary" (click)="abrirModal();"><i
+                  class="fas fa-cart-plus"></i>Reservar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-  </div>
-</div>
-</div>
-</div>
 
-<app-footer></app-footer>
-
+    <app-footer></app-footer>
